--- a/app/src/main/res/layout/task_simple.xml
+++ b/app/src/main/res/layout/task_simple.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -11,4 +12,5 @@
         android:textSize="30sp"
         android:paddingLeft="10dp"
         android:text="Task" />
+
 </LinearLayout>
