--- a/app/src/main/res/layout/task_simple.xml
+++ b/app/src/main/res/layout/task_simple.xml
@@ -10,7 +10,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="30sp"
+        android:padding="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:background = "@drawable/background_task"
         android:paddingLeft="10dp"
-        android:text="Task" />
+        android:text="Task"/>
 
 </LinearLayout>
